# ChangeLog for app-arch/bsdtar
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.6 2005/07/28 15:29:32 flameeyes Exp $

  28 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  bsdtar-1.02.027-r1.ebuild:
  Stable on amd64.

  22 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/bsdtar-1.02.027-osx.patch, bsdtar-1.02.027-r1.ebuild:
  Added patch for OSX compatibility.

  21 Jun 2005; Diego Pettenò <flameeyes@gentoo.org>
  bsdtar-1.02.027-r1.ebuild:
  Added build and static useflag, needed to build Gentoo/FreeBSD stage.

*bsdtar-1.02.027-r1 (17 Jun 2005)

  17 Jun 2005; <flame@gentoo.org> -bsdtar-1.02.027.ebuild,
  +bsdtar-1.02.027-r1.ebuild:
  Install in /bin as does gnutar. Symlink man page on BSD systems.

  16 Jun 2005; David Holm <dholm@gentoo.org> bsdtar-1.02.027.ebuild:
  Added to ~ppc.

*bsdtar-1.02.027 (16 Jun 2005)

  16 Jun 2005; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +bsdtar-1.02.027.ebuild:
  Initial version, BSD version of tar, usable also on Linux. Faster and
  simpler, and supports more fileformats.
