@@ -1,6 +1,13 @@
 # ChangeLog for app-arch/bsdtar
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.6 2005/07/28 15:29:32 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.7 2005/08/28 21:51:46 flameeyes Exp $
+
+*bsdtar-1.02.030 (28 Aug 2005)
+
+  28 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
+  +bsdtar-1.02.030.ebuild:
+  Updated to latest upstream version. Dropped osx patch as it's fixed upstream
+  now.
 
   28 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
   bsdtar-1.02.027-r1.ebuild:
